# nac

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: arm-linux-gnueabihf.toolchain.cmake  nac-config-version.cmake.in  nac-config.cmake.in
nac/: CMakeLists.txt
nac/core/: CMakeLists.txt  api.cc  args_map.cc  args_map.h  attribute.h  brew.h  common.cc  common.h  compute_device.cc  compute_device.h  context.cc  context.h  data_mm.h  executor.h  graph.cc  graph.h  hyperparameter.h  layer.h  layer_attribute.h  network.h  network_attribute.h  network_executor.h  node.cc  node.h  observable.h  observer.h  op_registry.cc  op_registry.h  op_registry_base.cc  operator_base.cc  operator_base.h  shape_base.h  tensor.cc  tensor.h  tensor_attribute.h  tensor_mm.h  tensor_shape.h  utils.cc  utils.h  workspace.h
nac/core/brew/: brew_darknet.cc  brew_darknet.h
nac/core/hyperparameter/: activation_hparam.h  conv_hparam.h  maxpool_hparam.h  softmax_hparam.h
nac/core/layer_attribute/: conv_attr.h
nac/include/: nac.h  nac_op_registry.h
nac/operator/: CMakeLists.txt  op_c_conv.cc  op_c_fp32.h  op_c_fp32_activation.cc  op_c_fp32_conv.cc  op_c_fp32_maxpool.cc  op_c_fp32_softmax.cc  op_c_registry.cc  op_c_registry.h  op_registry_base.cc  supported_ops
nac/operator/armv7/: CMakeLists.txt  op_armv7_fp32_conv.cc  op_armv7_registry.cc  op_armv7_registry.h
nac/test/: CMakeLists.txt  test_brew.cc  test_op_armv7_fp32.cc  test_op_c_fp32.cc
